<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <DUT Name="SRecoveryRequestOutput" Id="{ec4553f3-e045-4212-85e5-e2ee6ad8c437}">
    <Declaration><![CDATA[TYPE SRecoveryRequestOutput EXTENDS STriggeredOutput :
STRUCT
	RequestedState: STRING(256);
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>