<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <POU Name="FC_InitRaInterface" Id="{b6ec912e-68c2-4707-bca3-802686777af9}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION FC_InitRaInterface : BOOL
VAR_INPUT
END_VAR
VAR
	i: UINT;
	m_statesEnum: EProcessVariables;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[// OUT - alarms
FOR i := ResiConst.ARR_MIN TO RaInterface_GVL.ALARM_ARR_MAX DO
	RaInterface_GVL.Out_Alarms[i].Active := FALSE;
	RaInterface_GVL.Out_Alarms[i].AlarmId := 0;
	RaInterface_GVL.Out_Alarms[i].InstanceName := '';
	RaInterface_GVL.Out_Alarms[i].Message := '';
	RaInterface_GVL.Out_Alarms[i].Severity := ESeverity.none;
	RaInterface_GVL.Out_Alarms[i].TimeTicks := 0;
END_FOR

// OUT - process state
FOR i := ResiConst.ARR_MIN TO ResiConst.STATE_ARR_MAX DO
	m_statesEnum := i;
	RaInterface_GVL.Out_NamedProcessState[i].Name := TO_STRING(m_statesEnum);
END_FOR

// OUT - recovery request
RaInterface_GVL.Out_RecoveryRequest.ChangeTrigger := 0;
RaInterface_GVL.Out_RecoveryRequest.RequestedState := '';
]]></ST>
    </Implementation>
    <LineIds Name="FC_InitRaInterface">
      <LineId Id="14" Count="0" />
      <LineId Id="16" Count="1" />
      <LineId Id="19" Count="4" />
      <LineId Id="18" Count="0" />
      <LineId Id="15" Count="0" />
      <LineId Id="13" Count="0" />
      <LineId Id="8" Count="2" />
      <LineId Id="7" Count="0" />
      <LineId Id="27" Count="3" />
      <LineId Id="26" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>