<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="GvlInterface" Id="{ac2845d1-afe2-4ada-938e-1e71029a77b1}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK GvlInterface EXTENDS GvlInterfaceBase
VAR
	m_requestTrigger: USINT;
	m_rtrigRequest: R_TRIG;
	
	m_emptyRecovery: SRecovery;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[]]></ST>
    </Implementation>
    <Property Name="In_PtrBoolExprSpecs" Id="{d18a9359-8c87-4dbc-9702-2d8ba0ef7a84}">
      <Declaration><![CDATA[PROPERTY In_PtrBoolExprSpecs : POINTER TO SBoolExpressionSpec]]></Declaration>
      <Get Name="Get" Id="{8f80e118-ab98-4ca5-805b-67f6c13bb239}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[In_PtrBoolExprSpecs := ADR(RaInterface_GVL.In_BoolExprSpecs[ResiConst.ARR_MIN]);]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Property Name="In_PtrCompensations" Id="{0292ba7c-ce05-4631-971b-c3f3b062d4b5}">
      <Declaration><![CDATA[PROPERTY In_PtrCompensations : POINTER TO SCompensation]]></Declaration>
      <Get Name="Get" Id="{4bf2cbc1-b5aa-4fdb-8618-74b3b0ed39bf}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[In_PtrCompensations := ADR(RaInterface_GVL.In_Compensations[ResiConst.ARR_MIN]);
]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Property Name="In_PtrCompExpressions" Id="{9952aad3-e278-4dae-bd9c-9dc3de9502d7}">
      <Declaration><![CDATA[PROPERTY In_PtrCompExpressions : POINTER TO ComparisonExpression]]></Declaration>
      <Get Name="Get" Id="{41805503-d726-4e78-80c8-13f427ba3637}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[In_PtrCompExpressions := ADR(RaInterface_GVL.In_CompExpressions[ResiConst.ARR_MIN]);]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Property Name="In_PtrRuntimeConditions" Id="{2af8a34b-38ab-4338-b421-3859ad0b9265}">
      <Declaration><![CDATA[PROPERTY In_PtrRuntimeConditions : POINTER TO SRuntimeCondition]]></Declaration>
      <Get Name="Get" Id="{2d3913ff-fff5-4628-aa28-6521caad03a3}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[In_PtrRuntimeConditions := ADR(RaInterface_GVL.In_RuntimeConditions[ResiConst.ARR_MIN]);]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Property Name="In_PtrValueExpressions" Id="{0b7f1780-e399-4a3e-a48d-b783e6e195fc}">
      <Declaration><![CDATA[PROPERTY In_PtrValueExpressions : POINTER TO ValueExpression]]></Declaration>
      <Get Name="Get" Id="{e9f98798-e371-4864-8a97-7f718d5ef77d}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[In_PtrValueExpressions := ADR(RaInterface_GVL.In_ValueExpressions[ResiConst.ARR_MIN]);]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Property Name="In_Recovery" Id="{5c0cc20a-4120-40a1-a6d1-1050be58c7e3}">
      <Declaration><![CDATA[PROPERTY In_Recovery : SRecovery]]></Declaration>
      <Get Name="Get" Id="{904ee687-e3eb-4d00-8d51-bbc3e1cbe156}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[In_Recovery := RaInterface_GVL.In_Recovery;
]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Property Name="In_RecoveryAvailable" Id="{6f618211-c0a7-4434-876d-6b1a57b37efb}">
      <Declaration><![CDATA[PROPERTY In_RecoveryAvailable : BOOL]]></Declaration>
      <Get Name="Get" Id="{159d61e3-f8c8-4896-9029-e80b1020760c}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[In_RecoveryAvailable := RaInterface_GVL.In_RecoveryAvailable;
]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Property Name="Out_PtrProcessState" Id="{69c04e56-0963-4663-a6d4-48a42ea9e5e8}">
      <Declaration><![CDATA[PROPERTY Out_PtrProcessState : POINTER TO ProcessState]]></Declaration>
      <Set Name="Set" Id="{b2b89623-b48e-4505-9ebf-d6f60dc2e594}">
        <Declaration><![CDATA[VAR
	i: UINT;
	m_tmpVal: SValue;
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[FOR i := ResiConst.ARR_MIN TO ResiConst.STATE_ARR_MAX DO
	m_tmpVal := Out_PtrProcessState^.Retrieve(i, FALSE);
	
	RaInterface_GVL.Out_NamedProcessState[i].DataType := m_tmpVal.DataType;
	RaInterface_GVL.Out_NamedProcessState[i].Value.Binary := m_tmpVal.Value.Binary;
	RaInterface_GVL.Out_NamedProcessState[i].Value.Numeric := m_tmpVal.Value.Numeric;
	RaInterface_GVL.Out_NamedProcessState[i].Value.String_t := m_tmpVal.Value.String_t;
END_FOR
]]></ST>
        </Implementation>
      </Set>
    </Property>
    <Property Name="Out_RecoveryRequestedState" Id="{92ed3d05-1dc0-4eb5-b7e6-5841ca04e6ac}">
      <Declaration><![CDATA[PROPERTY Out_RecoveryRequestedState : STRING]]></Declaration>
      <Get Name="Get" Id="{3fcd9814-b373-45fc-8bab-a4ac9699a915}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[Out_RecoveryRequestedState := RaInterface_GVL.Out_RecoveryRequest.RequestedState;
]]></ST>
        </Implementation>
      </Get>
      <Set Name="Set" Id="{aad45b1b-8228-4837-91c6-515da93bf1ce}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[THIS^.m_requestTrigger := THIS^.m_requestTrigger + 1;
RaInterface_GVL.Out_RecoveryRequest.ChangeTrigger := THIS^.m_requestTrigger MOD 10;

RaInterface_GVL.Out_RecoveryRequest.RequestedState := Out_RecoveryRequestedState;
]]></ST>
        </Implementation>
      </Set>
    </Property>
    <Method Name="ResetRecovery" Id="{56a1131c-a1ff-471f-8fc6-5f4efd6f0d4c}">
      <Declaration><![CDATA[METHOD  ResetRecovery : BOOL
VAR
	i: UINT;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[RaInterface_GVL.In_Recovery := m_emptyRecovery;
RaInterface_GVL.In_RecoveryAvailable := FALSE;
]]></ST>
      </Implementation>
    </Method>
    <Method Name="SetCompensationActive" Id="{4d6f2f24-8cd7-4bc6-b594-b33d17003a81}">
      <Declaration><![CDATA[METHOD SetCompensationActive : BOOL
VAR_INPUT
	i_idx: UINT;
	i_setValue: BOOL;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[RaInterface_GVL.In_Compensations[i_idx].IsActive := i_setValue;
]]></ST>
      </Implementation>
    </Method>
    <LineIds Name="GvlInterface">
      <LineId Id="9" Count="0" />
    </LineIds>
    <LineIds Name="GvlInterface.In_PtrBoolExprSpecs.Get">
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="GvlInterface.In_PtrCompensations.Get">
      <LineId Id="5" Count="0" />
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="GvlInterface.In_PtrCompExpressions.Get">
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="GvlInterface.In_PtrRuntimeConditions.Get">
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="GvlInterface.In_PtrValueExpressions.Get">
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="GvlInterface.In_Recovery.Get">
      <LineId Id="2" Count="0" />
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="GvlInterface.In_RecoveryAvailable.Get">
      <LineId Id="2" Count="0" />
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="GvlInterface.Out_PtrProcessState.Set">
      <LineId Id="10" Count="0" />
      <LineId Id="15" Count="0" />
      <LineId Id="13" Count="0" />
      <LineId Id="17" Count="0" />
      <LineId Id="16" Count="0" />
      <LineId Id="18" Count="1" />
      <LineId Id="2" Count="0" />
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="GvlInterface.Out_RecoveryRequestedState.Get">
      <LineId Id="2" Count="0" />
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="GvlInterface.Out_RecoveryRequestedState.Set">
      <LineId Id="10" Count="0" />
      <LineId Id="8" Count="1" />
      <LineId Id="5" Count="0" />
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="GvlInterface.ResetRecovery">
      <LineId Id="10" Count="1" />
      <LineId Id="8" Count="0" />
    </LineIds>
    <LineIds Name="GvlInterface.SetCompensationActive">
      <LineId Id="5" Count="0" />
      <LineId Id="11" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>